--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -37,13 +37,14 @@
               <h5><%= I18n.t('views.messages.team_members2') %></h5>
               <table class="table">
                 <tbody>
-                  <% @team.assigns.each do |assign| %>
+                  <% @assign_members.each do |assign| %>
                     <tr>
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
                       <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
                     </tr>
                   <% end %>
+                  <%= paginate @assign_members %>
                 </tbody>
               </table>
             </div>
