Add:articleに自動リンク機能追加

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,7 +14,7 @@
       </div>
       <!-- /.card-header -->
       <div class="card-body">
-        <%= markdown(@article.content).html_safe %>
+        <%= auto_link(@article.content, :html => { :target => '_blank' }) %>
         <%= image_tag @article.image_url if @article.image_url %>
       </div>
 
