--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -31,6 +31,11 @@
   </div>
 
   <div class="form-group">
+    <%= form.label :video %><br>
+    <%= form.file_field :video %>
+  </div>
+
+  <div class="form-group">
     <%= form.submit I18n.t('views.button.submit'), class: 'btn btn-primary' %>
   </div>
 <% end %>
