--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,6 +11,7 @@
         <%= l(@article.created_at, format: :long) %>
         <%= link_to I18n.t('views.button.edit'), edit_article_path(@article) %>
         <%= link_to I18n.t('views.button.delete'), article_path(@article), method: :delete %>
+        <video src="<%= rails_blob_path(@article.video) %>" type="video/MOV" controls></video>
       </div>
       <!-- /.card-header -->
       <div class="card-body">
